tests/fixtures/valid/block_expr.vt
fn block_value(): i32 {
    let x = { let a = 10; a + 20 }
    return x;
}
