tests/fixtures/invalid/type_mismatch.vt
fn test(a: i32): i32 {
    let b: bool = 42;
    return b;
}
